css adjustments, spacing field fix Signed-off-by:KProvance <kevin.provance@gmail.com>

--- a/ReduxCore/inc/fields/border/field_border.less
+++ b/ReduxCore/inc/fields/border/field_border.less
@@ -16,3 +16,22 @@
         margin-bottom: 7px;
     }
 }
+
+@media screen and (max-width: 782px) {
+    .redux-container-border {
+        .field-border-input {
+            input {
+                display: inline-block !important;
+                width: 100px !important;
+            }
+            .add-on {
+                padding: 7px 4px;
+                font-size: 16px;
+                line-height: 1.5;
+            }
+        }
+        .select_wrapper {
+            margin-top: 6px;
+        }
+    }
+}
